--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -125,8 +125,8 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="56dp"
+        android:layout_height="66dp"
         android:layout_marginBottom="195dp"
         android:layout_marginTop="501dp"
         android:fontFamily="sans-serif-medium"
