--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/email"
         android:layout_width="321dp"
         android:layout_height="38dp"
         android:layout_marginBottom="268dp"
@@ -55,9 +55,9 @@
         android:id="@+id/password"
         android:layout_width="321dp"
         android:layout_height="38dp"
-        android:layout_marginBottom="226dp"
+        android:layout_marginBottom="228dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="449dp"
         android:autofillHints="@string/prompt_password"
         android:backgroundTint="@color/white"
         android:hint="@string/prompt_password"
@@ -68,11 +68,12 @@
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="13dp"
+        android:fontFamily="sans-serif"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/username"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/username"
-        app:layout_constraintTop_toTopOf="@+id/username"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.696"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <ProgressBar
@@ -125,8 +126,8 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="56dp"
-        android:layout_height="66dp"
+        android:layout_width="101dp"
+        android:layout_height="33dp"
         android:layout_marginBottom="195dp"
         android:layout_marginTop="501dp"
         android:fontFamily="sans-serif-medium"
