--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -7,26 +7,9 @@
     android:background="@drawable/bgradient"
     tools:context=".forgetPassword">
 
-    <Button
-        android:id="@+id/login"
-        android:layout_width="328dp"
-        android:layout_height="50dp"
-        android:layout_gravity="start"
-        android:layout_marginBottom="67dp"
-        android:layout_marginTop="598dp"
-        android:background="@drawable/buttonframe"
-        android:enabled="false"
-        android:fontFamily="@font/ralewayregular"
-        android:text="@string/action_log_in_short"
-        android:textColor="@color/darkgrey"
-        android:textSize="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/nama"
+        android:id="@+id/email"
         android:layout_width="321dp"
         android:layout_height="38dp"
         android:layout_marginBottom="268dp"
@@ -44,31 +27,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="321dp"
-        android:layout_height="38dp"
-        android:layout_marginBottom="226dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="42dp"
-        android:autofillHints="@string/prompt_password"
-        android:backgroundTint="@color/white"
-        android:hint="@string/prompt_password"
-        android:imeActionLabel="@string/action_sign_in_short"
-        android:imeOptions="actionDone"
-        android:inputType="textPassword"
-        android:selectAllOnFocus="true"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:textSize="13dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/nama"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/nama"
-        app:layout_constraintTop_toTopOf="@+id/nama"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent"></EditText>
 
     <ProgressBar
         android:id="@+id/loading"
@@ -76,15 +35,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="64dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="64dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/password"
-        app:layout_constraintStart_toStartOf="@+id/password"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintVertical_bias="0.3"
+        tools:layout_editor_absoluteX="216dp" />
 
     <TextView
         android:id="@+id/textView2"
@@ -122,16 +78,36 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="195dp"
-        android:layout_marginTop="501dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="Lupa Password?"
+        android:layout_marginBottom="330dp"
+        android:layout_marginEnd="108dp"
+        android:layout_marginStart="57dp"
+        android:layout_marginTop="382dp"
+        android:fontFamily="sans-serif-black"
+        android:text="Masukkan email untuk reset password"
         android:textColor="@color/white"
-        android:textSize="13dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.915"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnReset"
+        android:layout_width="328dp"
+        android:layout_height="50dp"
+        android:layout_gravity="start"
+        android:layout_marginBottom="67dp"
+        android:layout_marginTop="598dp"
+        android:background="@drawable/buttonframe"
+        android:enabled="false"
+        android:fontFamily="@font/ralewayregular"
+        android:text="RESET PASSWORD"
+        android:textColor="@color/darkgrey"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
