--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -7,6 +7,178 @@
     android:background="@drawable/bgwhite"
     tools:context=".signup">
 
+    <EditText
+        android:id="@+id/nama"
+        android:layout_width="166dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="567dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginStart="199dp"
+        android:layout_marginTop="130dp"
+        android:backgroundTint="@color/grey"
+        android:hint="Nama"
+        android:imeActionLabel="@string/action_sign_in_short"
+        android:imeOptions="actionDone"
+        android:inputType="text"
+        android:selectAllOnFocus="true"
+        android:textColor="@color/darkgrey"
+        android:textColorHint="@color/grey"
+        android:textSize="13dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.333" />
+
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="166dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="510dp"
+        android:layout_marginEnd="47dp"
+        android:layout_marginStart="198dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/grey"
+        android:hint="Email"
+        android:imeActionLabel="@string/action_sign_in_short"
+        android:imeOptions="actionDone"
+        android:inputType="textEmailAddress"
+        android:selectAllOnFocus="true"
+        android:textColor="@color/darkgrey"
+        android:textColorHint="@color/grey"
+        android:textSize="13dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nama" />
+
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="166dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="455dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginStart="198dp"
+        android:layout_marginTop="17dp"
+        android:backgroundTint="@color/grey"
+        android:fontFamily="sans-serif"
+        android:hint="Password"
+        android:imeActionLabel="@string/action_sign_in_short"
+        android:imeOptions="actionDone"
+        android:inputType="textPassword"
+        android:selectAllOnFocus="true"
+        android:textColor="@color/darkgrey"
+        android:textColorHint="@color/grey"
+        android:textSize="13dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <EditText
+        android:id="@+id/umur"
+        android:layout_width="166dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="345dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginStart="198dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/grey"
+        android:hint="Umur"
+        android:imeActionLabel="@string/action_sign_in_short"
+        android:imeOptions="actionDone"
+        android:inputType="text"
+        android:selectAllOnFocus="true"
+        android:textColor="@color/darkgrey"
+        android:textColorHint="@color/grey"
+        android:textSize="13dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/jeniskelamin"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <EditText
+        android:id="@+id/bb"
+        android:layout_width="166dp"
+        android:layout_height="38dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginStart="198dp"
+        android:layout_marginTop="17dp"
+        android:backgroundTint="@color/grey"
+        android:hint="Berat Badan KG"
+        android:imeActionLabel="@string/action_sign_in_short"
+        android:imeOptions="actionDone"
+        android:inputType="numberDecimal"
+        android:selectAllOnFocus="true"
+        android:textColor="@color/darkgrey"
+        android:textColorHint="@color/grey"
+        android:textSize="13dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/umur"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <EditText
+        android:id="@+id/tb"
+        android:layout_width="166dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="234dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginTop="17dp"
+        android:backgroundTint="@color/grey"
+        android:hint="Tinggi Badan CM"
+        android:imeActionLabel="@string/action_sign_in_short"
+        android:imeOptions="actionDone"
+        android:inputType="numberDecimal"
+        android:selectAllOnFocus="true"
+        android:textColor="@color/darkgrey"
+        android:textColorHint="@color/grey"
+        android:textSize="13dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bb"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/SignUp"
+        android:layout_width="328dp"
+        android:layout_height="50dp"
+        android:layout_gravity="start"
+        android:layout_marginBottom="67dp"
+        android:layout_marginTop="598dp"
+        android:background="@drawable/buttonframedark"
+        android:enabled="false"
+        android:fontFamily="@font/ralewayregular"
+        android:text="Sign Up"
+        android:textColor="@color/white"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <Spinner
+        android:id="@+id/jeniskelamin"
+        android:layout_width="162dp"
+        android:layout_height="37dp"
+        android:layout_marginBottom="403dp"
+        android:layout_marginEnd="47dp"
+        android:layout_marginStart="202dp"
+        android:layout_marginTop="15dp"
+        android:dropDownWidth="wrap_content"
+        android:spinnerMode="dropdown"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password" />
+
     <TextView
         android:id="@+id/SignUp"
         android:layout_width="wrap_content"
@@ -147,157 +319,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
-
-    <EditText
-        android:id="@+id/nama"
-        android:layout_width="166dp"
-        android:layout_height="38dp"
-        android:layout_marginBottom="575dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginStart="198dp"
-        android:layout_marginTop="136dp"
-        android:backgroundTint="@color/grey"
-        android:hint="Nama"
-        android:imeActionLabel="@string/action_sign_in_short"
-        android:imeOptions="actionDone"
-        android:inputType="text"
-        android:selectAllOnFocus="true"
-        android:textColor="@color/darkgrey"
-        android:textColorHint="@color/grey"
-        android:textSize="13dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.333" />
-
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="166dp"
-        android:layout_height="38dp"
-        android:layout_marginBottom="510dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginStart="198dp"
-        android:layout_marginTop="136dp"
-        android:backgroundTint="@color/grey"
-        android:hint="Email"
-        android:imeActionLabel="@string/action_sign_in_short"
-        android:imeOptions="actionDone"
-        android:inputType="textEmailAddress"
-        android:selectAllOnFocus="true"
-        android:textColor="@color/darkgrey"
-        android:textColorHint="@color/grey"
-        android:textSize="13dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="166dp"
-        android:layout_height="38dp"
-        android:layout_marginBottom="455dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginStart="198dp"
-        android:layout_marginTop="136dp"
-        android:backgroundTint="@color/grey"
-        android:hint="Password"
-        android:fontFamily="sans-serif"
-        android:imeActionLabel="@string/action_sign_in_short"
-        android:imeOptions="actionDone"
-        android:inputType="textPassword"
-        android:selectAllOnFocus="true"
-        android:textColor="@color/darkgrey"
-        android:textColorHint="@color/grey"
-        android:textSize="13dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <EditText
-    android:id="@+id/umur"
-    android:layout_width="166dp"
-    android:layout_height="38dp"
-    android:layout_marginBottom="345dp"
-    android:layout_marginEnd="45dp"
-    android:layout_marginStart="198dp"
-    android:layout_marginTop="136dp"
-    android:backgroundTint="@color/grey"
-    android:hint="Umur"
-    android:imeActionLabel="@string/action_sign_in_short"
-    android:imeOptions="actionDone"
-    android:inputType="text"
-    android:selectAllOnFocus="true"
-    android:textColor="@color/darkgrey"
-    android:textColorHint="@color/grey"
-    android:textSize="13dp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.0"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="1.0" />
-
-    <EditText
-        android:id="@+id/umur"
-        android:layout_width="166dp"
-        android:layout_height="38dp"
-        android:layout_marginBottom="290dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginStart="198dp"
-        android:layout_marginTop="136dp"
-        android:backgroundTint="@color/grey"
-        android:hint="Berat Badan KG"
-        android:imeActionLabel="@string/action_sign_in_short"
-        android:imeOptions="actionDone"
-        android:inputType="numberDecimal"
-        android:selectAllOnFocus="true"
-        android:textColor="@color/darkgrey"
-        android:textColorHint="@color/grey"
-        android:textSize="13dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <EditText
-        android:id="@+id/umur"
-        android:layout_width="166dp"
-        android:layout_height="38dp"
-        android:layout_marginBottom="235dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginStart="198dp"
-        android:layout_marginTop="136dp"
-        android:backgroundTint="@color/grey"
-        android:hint="Tinggi Badan CM"
-        android:imeActionLabel="@string/action_sign_in_short"
-        android:imeOptions="actionDone"
-        android:inputType="numberDecimal"
-        android:selectAllOnFocus="true"
-        android:textColor="@color/darkgrey"
-        android:textColorHint="@color/grey"
-        android:textSize="13dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <Spinner
-        android:id="@+id/jeniskelamin"
-        android:layout_width="162dp"
-        android:layout_height="37dp"
-        android:dropDownWidth="wrap_content"
-        android:spinnerMode="dropdown"
-        tools:layout_editor_absoluteX="202dp"
-        tools:layout_editor_absoluteY="291dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
