--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,11 +55,12 @@
         android:id="@+id/password"
         android:layout_width="321dp"
         android:layout_height="38dp"
-        android:layout_marginBottom="228dp"
+        android:layout_marginBottom="212dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="449dp"
+        android:layout_marginTop="450dp"
         android:autofillHints="@string/prompt_password"
         android:backgroundTint="@color/white"
+        android:fontFamily="sans-serif"
         android:hint="@string/prompt_password"
         android:imeActionLabel="@string/action_sign_in_short"
         android:imeOptions="actionDone"
@@ -68,10 +69,9 @@
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="13dp"
-        android:fontFamily="sans-serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.696"
+        app:layout_constraintHorizontal_bias="0.662"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
@@ -125,10 +125,10 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/btnLupaPassword"
         android:layout_width="101dp"
         android:layout_height="33dp"
-        android:layout_marginBottom="195dp"
+        android:layout_marginBottom="188dp"
         android:layout_marginTop="501dp"
         android:fontFamily="sans-serif-medium"
         android:text="Lupa Password?"
@@ -136,8 +136,9 @@
         android:textSize="13dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.915"
+        app:layout_constraintHorizontal_bias="0.948"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/password"
+        app:layout_constraintVertical_bias="0.956" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
