--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,20 +11,24 @@
         android:id="@+id/eksperimen"
         android:layout_width="250dp"
         android:layout_height="50dp"
+        android:layout_marginBottom="200dp"
+        android:layout_marginTop="481dp"
         android:background="@drawable/buttonframe"
         android:fontFamily="@font/ralewaybold"
         android:text="Eksperimen"
         android:textSize="13dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="481dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginBottom="75dp"
+        android:layout_marginTop="606dp"
         android:background="@drawable/buttonframe"
         android:fontFamily="@font/ralewaybold"
         android:text="Rekam Aktivitas"
@@ -33,33 +37,38 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginBottom="137dp"
+        android:layout_marginTop="544dp"
         android:background="@drawable/buttonframe"
         android:fontFamily="@font/ralewaybold"
         android:text="Pilih Aktivitas"
         android:textSize="13dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/eksperimen" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/namaAktivitas"
+    <ImageView
+        android:id="@+id/menuProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/ralewaymedium"
-        android:text="Berlari"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        tools:layout_editor_absoluteX="175dp"
-        tools:layout_editor_absoluteY="367dp" />
+        android:layout_marginBottom="678dp"
+        android:layout_marginEnd="359dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="26dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/profile" />
 
     <TextView
         android:id="@+id/hi"
@@ -82,6 +91,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="681dp"
+        android:layout_marginStart="200dp"
         android:layout_marginTop="26dp"
         android:fontFamily="@font/ralewayextrabold"
         android:text="@string/user"
@@ -92,17 +102,41 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.048"
         app:layout_constraintStart_toEndOf="@+id/hi"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/aktivitasTerakhir"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="576dp"
+        android:layout_marginEnd="122dp"
+        android:layout_marginStart="121dp"
+        android:layout_marginTop="131dp"
         android:fontFamily="@font/ralewayextrabold"
         android:text="Aktivitas Terakhir"
         android:textAlignment="center"
         android:textColor="@color/darkgrey"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="121dp"
-        tools:layout_editor_absoluteY="131dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/namaAktivitas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="340dp"
+        android:layout_marginEnd="175dp"
+        android:layout_marginStart="175dp"
+        android:layout_marginTop="367dp"
+        android:fontFamily="@font/ralewaymedium"
+        android:text="Berlari"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
