--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,7 +34,7 @@
         android:id="@+id/email"
         android:layout_width="321dp"
         android:layout_height="38dp"
-        android:layout_marginBottom="268dp"
+        android:layout_marginBottom="300dp"
         android:layout_marginEnd="27dp"
         android:layout_marginStart="47dp"
         android:layout_marginTop="417dp"
@@ -57,7 +57,7 @@
         android:layout_height="38dp"
         android:layout_marginBottom="212dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="450dp"
+        android:layout_marginTop="10dp"
         android:autofillHints="@string/prompt_password"
         android:backgroundTint="@color/white"
         android:fontFamily="sans-serif"
@@ -73,7 +73,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.662"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email"
         app:layout_constraintVertical_bias="0.0" />
 
     <ProgressBar
@@ -97,7 +97,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="125dp"
-        android:layout_marginStart="113dp"
+        android:layout_marginStart="105dp"
         android:layout_marginTop="571dp"
         android:text="Tidak Punya Akun?  "
         android:textSize="13dp"
@@ -113,7 +113,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="125dp"
         android:layout_marginEnd="120dp"
-        android:layout_marginStart="227dp"
+        android:layout_marginStart="240dp"
         android:layout_marginTop="571dp"
         android:fontFamily="sans-serif-medium"
         android:text="@string/sign_up"
@@ -128,17 +128,17 @@
         android:id="@+id/btnLupaPassword"
         android:layout_width="101dp"
         android:layout_height="33dp"
-        android:layout_marginBottom="188dp"
-        android:layout_marginTop="501dp"
+        android:layout_marginBottom="71dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="sans-serif-medium"
         android:text="Lupa Password?"
         android:textColor="@color/white"
         android:textSize="13dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.948"
+        app:layout_constraintHorizontal_bias="0.929"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="0.956" />
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
